@@ -2,6 +2,7 @@ BEEBEEP (Secure Lan Messanger)
 
 BeeBEEP 2.0.5
 - Fixed issue with "This app is preventing shutdown" in Windows
+- Removing a group action will delete also the chat with the group members
 
 BeeBEEP 2.0.4
 - Some GUI improvements (new icons, file sharing tree load faster)
